--- a/relatorio.Rmd
+++ b/relatorio.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Uma síntese do saneamento básico brasileiro com uma perspectiva estatística."
 author: "Vítor Pereira"
-abstract: "abstract"
+abstract: "De acordo com a Agência Senado, no Brasil temos quase 35 milhões de pessoas sem água tratada e cerca de 100 milhões não têm acesso à coleta de esgoto. É um dos maiores causadores de doenças, segundo o IBGE, cerca de 11 mil pessoas morrem por ano por falta de saneamento. O presente trabalho é uma tentativa de conscientizar e aumentar o entendimento sobre essa questão imprescindível para o desenvolvimento brasileiro. Para esse fim busca-se mensurar a qualidade das políticas públicas e o desenvolvimento de cada um 26 estados brasileiros e o Distrito Federal. Para isso serão utilizados variáveis sociais, econômicas, educacionais e da saúde com o ajuste de um modelo de Regressão Beta para avaliar a significância das variáveis e o ajuste da variável porcentagem da população urbana residente em domicílios ligados à rede de esgotamento sanitário no ano de 2017."
 header-includes:
    - \usepackage[brazil]{babel}
    - \usepackage{bm}
@@ -34,30 +34,39 @@ library(ggplot2)
 library(qqplotr) 
 library(patchwork)
 
+fit2df<-function(fit) {
+  summary(fit) |>
+    (\(x) x$coefficients)() |>
+    data.frame() %>% 
+    .[,0:4]|>
+    round(3) |>
+    mutate(P.valor = ifelse(
+      `mean.Pr...z..` < 0.001,"<0.001*",
+      ifelse(`mean.Pr...z..` < 0.05, paste0(`mean.Pr...z..`, '*', sep = ''), `mean.Pr...z..`))) |>
+    select(-`mean.Pr...z..`,
+      "Estimativa" = "mean.Estimate",
+      "Desvio padrão" = "mean.Std..Error",
+      "Estatística z" = "mean.z.value"
+    )
+}
 
-boxplot <- function(v1){
+boxplot <- function(v1, y){
   ggplot(df, aes(x=Avaliacao_Saneamento, y={{v1}}, fill = Avaliacao_Saneamento)) + 
     geom_boxplot(alpha=0.3) +
-    theme(legend.position="none")
-
+    theme(legend.position="none") + labs(x = "Avaliação do Saneamento", y = y)
 }
-
-density <- function(v1){
+density <- function(v1, x){
   ggplot(data=df, aes(x={{v1}})) +
-    geom_density(adjust=1.5, alpha=.4)
+    geom_density(adjust=1.5, alpha=.4) +
+    labs(x = x)
 }
-
 dot <- function(v1){
   ggplot(df, aes(x={{v1}}, y=Saneamento)) +
   geom_point() +
   geom_smooth(method=lm , color="red", fill="#69b3a2", se=TRUE) 
 }
-
-
 data = readr::read_csv('./data/data_modificado.csv')
-
 df = data[2:28, 2:ncol(data)]
-
 df = df %>% 
   mutate(Saneamento = 
            `% da população urbana residente em domicílios ligados à rede de esgotamento sanitário 2017`/100)
@@ -70,28 +79,49 @@ df = df %>%
   mutate(Avaliacao_Saneamento = ordered(Avaliacao_Saneamento, 
                                         levels = c("Péssimo", "Ruim", "Médio",
                                                    "Bom")))
-
 ```
 
 
 
 # Introdução
 
-A ideia do presente trabalho é estudar, conscientizar e divulgar com abordagem estatística rigorosa a situação do saneamento básico brasileiro, que é caracterizado como o conjunto de ações e serviços que visam garantir a saúde e o bem-estar da população, por meio do fornecimento de água potável, coleta e tratamento de esgoto, limpeza urbana e gestão de resíduos sólidos por meio de índices e taxas dos 26 estados e do Distrito Federal. 
+A ideia do presente trabalho é estudar, conscientizar e divulgar com abordagem 
+estatística rigorosa a situação do saneamento básico brasileiro por meio de 
+índices e taxas dos 26 estados e do Distrito Federal. 
 
-Segundo o Instituto Trata Brasil, 96% da população urbana brasileira possui acesso à água potável, mas apenas 61% têm coleta de esgoto. No entanto, apenas 36% do esgotoé tratado corretamente. Posto isso, teremos como objetivo analisar a variável a porcentagem da população urbana residente em domicílios ligados à rede de esgotamento sanitário no ano de 2017, devido ao seu enorme impacto ambiental e de saúde pública. . 
+Segundo o Instituto Trata Brasil, 96% da população urbana brasileira possui 
+acesso à água potável, mas apenas 61% têm coleta de esgoto. No entanto, apenas 
+36% do esgoto é tratado corretamente. Posto isso, teremos como objetivo analisar 
+a variável a porcentagem da população urbana residente em domicílios ligados à 
+rede de esgotamento sanitário no ano de 2017, devido ao seu enorme impacto 
+ambiental e de saúde pública. 
 
-Infelizmente, o saneamento básico no Brasil ainda é insuficiente e ineficiente em muitas áreas do país e para melhorar a situação, o governo brasileiro tem implementado diversas políticas e programas de saneamento básico, como o Plano Nacional de Saneamento Básico (Plansab) e o Programa de Aceleração do Crescimento (PAC). Esses programas visam ampliar o acesso à água tratada e ao esgoto tratado, bem como aumentar a eficiência e a qualidade dos serviços de saneamento. 
+Infelizmente, o saneamento básico no Brasil ainda é insuficiente e ineficiente 
+em muitas áreas do país e para melhorar a situação, o governo brasileiro tem 
+implementado diversas políticas e programas de saneamento básico, como o 
+Plano Nacional de Saneamento Básico (Plansab) e o Programa de Aceleração do 
+Crescimento (PAC). Esses programas visam ampliar o acesso à água tratada e ao 
+esgoto tratado, bem como aumentar a eficiência e a qualidade dos serviços de 
+saneamento. 
 
-Os índices e taxas de variáveis econômicas, educacionais, de saúde e sociais que utilizaremos para melhorar a compreensão da situação da variável objetivo. É importante ressaltar que as variáveis não necessariamente causam a precariedade ou a qualidade do saneamento, mas servem para estimar outras variáveis: Qualidade das políticas públicas e desenvolvimento dos estados que são as variáveis que mais interferem nos níveis de higiene do sistema cloacal brasileiro. As variáveis que utilizaremos são:
+Utilizaremos índices e taxas de variáveis econômicas, educacionais, de saúde e 
+sociais para melhorar a compreensão da situação da variável objetivo. 
+É importante ressaltar que as variáveis não necessariamente causam a 
+precariedade ou a qualidade do saneamento, mas servem para estimar outras 
+variáveis: Qualidade das políticas públicas e desenvolvimento dos estados que 
+são as variáveis que mais interferem nos níveis de higiene do sistema cloacal 
+brasileiro. As variáveis que utilizaremos são:
 
 * **EDUCACIONAIS**
   * % dos ocupados com ensino fundamental completo 2010
-  * % dos ocupados com ensino médio completo 2010                                 * IDEB anos iniciais do ensino fundamental 2015                                 * % de docentes na rede privada do fundamental com formação adequada 2016
+  * % dos ocupados com ensino médio completo 2010                                 
+  * IDEB anos iniciais do ensino fundamental 2015                                 
+  * % de docentes na rede privada do fundamental com formação adequada 2016
   * Taxa de analfabetismo - 15 anos ou mais de idade 2016
 
 * **ECONÔMICAS**
-  * Produto Interno Bruto per capita 2016                                         * Participação da Agropecuária no Valor Adicionado 2016
+  * Produto Interno Bruto per capita 2016                                         
+  * Participação da Agropecuária no Valor Adicionado 2016
   * Participação da Indústria no Valor Adicionado 2016
   * % de pobres 2016
 
@@ -107,7 +137,9 @@ Os índices e taxas de variáveis econômicas, educacionais, de saúde e sociais
 
 # Análise Exploratória
 
-Nesta seção veremos um breve resumo das variáveis de estudo, com medidas descritivas, medidas de dispresão e gráficos de dispersão. Para simplificar a análise gráfica da Taxa do Saneamento Básico, iremos classificá-lo:
+Nesta seção veremos um breve resumo das variáveis de estudo, com medidas 
+descritivas, medidas de dispersão e gráficos de dispersão. Para simplificar a 
+análise gráfica da Taxa do Saneamento Básico, iremos classificá-lo:
 
 * Taxa do Saneamento < 0.2 -> Saneamento Péssimo
 * 0.2 <= Taxa do Saneamento < 0.4 -> Saneamento Ruim
@@ -116,136 +148,192 @@ Nesta seção veremos um breve resumo das variáveis de estudo, com medidas desc
 
 ## Variáveis Educacionais
 
-Na análise das variáveis educacionais, três são taxas e apenas o IDEB é o índice, assim percebemos que tem-se uma proximidade entre a média e a mediana. Com todos os valores medianos das taxas ficando entre 40 e 60, assim mostrando que essas métricas indicam uma precariedade na educação brasileira, conforme podemos ver pela Tabela \@ref(tab:tab1). 
+Na análise das variáveis educacionais, três são taxas e apenas o IDEB é o índice,
+assim percebemos que tem-se uma proximidade entre a média e a mediana. Com todos
+os valores medianos das taxas ficando entre 40 e 60, assim mostrando que essas 
+métricas indicam uma precariedade na educação brasileira, conforme podemos ver 
+pela Tabela \@ref(tab:tab1). 
 
 
 ```{r tab1}
 fastrep::describe(df %>% 
-                    select(`% dos ocupados com ensino fundamental completo 2010`, `% dos ocupados com ensino médio completo 2010`, `IDEB anos iniciais do ensino fundamental 2015`,`% de docentes na rede privada do fundamental com formação adequada 2016`, )) 
+                    select(`% dos ocupados com ensino fundamental completo 2010`, 
+                           `% dos ocupados com ensino médio completo 2010`, 
+                           `IDEB anos iniciais do ensino fundamental 2015`, 
+                           `% de docentes na rede privada do fundamental com formação adequada 2016`)) %>%
+  fastrep::tbl("Medidas Resumo das Variáveis Educacionais")
 ```
 
-Observa-se que a maioria dos estados tem entre 30% e 50% dos trabalhadores com ensino médio ou fundamental completos e pelas Figuras \@ref(fig:fig1) \@ref(fig:fig2) percebe-se que existe tendência de crescimento da Avaliação do Saneamento concomitantemente com a porcentagem dos trabalhadores ocupados com ensino fundamental ou médio completo.
+Observa-se que a maioria dos estados tem entre 30% e 50% dos trabalhadores com 
+ensino médio ou fundamental completos e pelas Figuras \@ref(fig:fig1) e 
+\@ref(fig:fig2) percebe-se que existe tendência de crescimento da Avaliação do 
+Saneamento concomitantemente com a porcentagem dos trabalhadores ocupados com 
+ensino fundamental ou médio completo.
 
 ```{r fig1, fig.cap="Comportamento da variável: Porcentagem de trabalhadores com ensino fundamental."}
-boxplot(`% dos ocupados com ensino fundamental completo 2010`) +
-  density(`% dos ocupados com ensino fundamental completo 2010`)
+boxplot(`% dos ocupados com ensino fundamental completo 2010`, "Ocupados com Ensino Fundamental") +
+  density(`% dos ocupados com ensino fundamental completo 2010`, "Ocupados com Ensino Fundamental")
 ```
 
 ```{r fig2, fig.cap="Comportamento da variável: Porcentagem de trabalhadores com ensino médio."}
-boxplot(`% dos ocupados com ensino médio completo 2010`) +
-  density(`% dos ocupados com ensino médio completo 2010`)
+boxplot(`% dos ocupados com ensino médio completo 2010`, "Ocupados com Ensino Médio") +
+  density(`% dos ocupados com ensino médio completo 2010`, "Ocupados com Ensino Médio")
 ```
 
-Conforme as Figuras \@ref(fig:fig3) e \@ref(fig:fig4), o IDEB tem valores semelhantes para as três menores classificações da Avaliação do Saneamento, com o nível bom se sobressaindo, assim como para a porcentagem de docentes com formação adequado no ensino privado, em que as avaliações de Péssimo a Médio são parecidos e com a qualificação do saneamento como boa, sendo pouco superior.
+Conforme as Figuras \@ref(fig:fig3) e \@ref(fig:fig4), 
+o IDEB tem valores semelhantes para as três menores classificações da 
+Avaliação do Saneamento, com o nível bom se sobressaindo, assim como, 
+para a porcentagem de docentes com formação adequado no ensino privado, 
+em que as avaliações de Péssimo a Médio são parecidos e com a qualificação do 
+saneamento como boa, sendo pouco superior.
 
 
 ```{r fig3, fig.cap="Comportamento da variável: IDEB do ensino fundamental."}
-boxplot(`IDEB anos iniciais do ensino fundamental 2015`) +
-  density(`IDEB anos iniciais do ensino fundamental 2015`)
+boxplot(`IDEB anos iniciais do ensino fundamental 2015`, "IDEB") +
+  density(`IDEB anos iniciais do ensino fundamental 2015`, "IDEB")
 ```
 
 
 ```{r fig4, fig.cap="Comportamento da variável: Porcentagem de docentes com formação adequada no ensino privado."}
-boxplot(`% de docentes na rede privada do fundamental com formação adequada 2016`) +
-  density(`% de docentes na rede privada do fundamental com formação adequada 2016`)
+boxplot(`% de docentes na rede privada do fundamental com formação adequada 2016`, "Docentes da rede privada com formação adequada") +
+  density(`% de docentes na rede privada do fundamental com formação adequada 2016`, "Docentes da rede privada com formação adequada")
 ```
 
 ## Variáveis econômicas
 
-Outro tipo de variável que deve impactar diretamente a classificação do saneamento básico são as variáveis econômicas, em que pela Tabela \@ref(tab:tab2), notamos um desvio padrão grande para o PIB per capita e a % de pobres e em todas as medidas de resumo a participação da agropecuária é inferior a participação da indústria na economia do estado.
+Outro tipo de variável que deve impactar diretamente a classificação do 
+saneamento básico são as variáveis econômicas, em que pela Tabela \@ref(tab:tab2), 
+notamos um desvio padrão grande para o PIB per capita e a % de pobres e em todas 
+as medidas de resumo a participação da agropecuária é inferior a participação da
+indústria na economia do estado.
 
 
 ```{r tab2}
 fastrep::describe(df %>% 
-                    select(`Produto Interno Bruto per capita 2016`, `Participação da Agropecuária no Valor Adicionado 2016`,`Participação da Indústria no Valor Adicionado 2016`, `% de pobres 2016`)) 
+                    select(`Produto Interno Bruto per capita 2016`, 
+                           `Participação da Agropecuária no Valor Adicionado 2016`, 
+                           `Participação da Indústria no Valor Adicionado 2016`, 
+                           `% de pobres 2016`)) %>%
+  fastrep::tbl("Medidas Resumo das Variáveis Econômicas") 
 ```
 
-É perceptível que a conforme diminui a % de pobres existe uma tendência de aumento na avaliação do saneamento, no entanto com poucas diferenças para a classificação Ruim e Médio. Pela Figura \@ref(fig:fig5), temos que as classificações Péssimo, Ruim e Médio estão com valores muito próximos.
+É perceptível que a conforme diminui a % de pobres existe uma tendência de 
+aumento na avaliação do saneamento, no entanto com poucas diferenças para a 
+classificação Ruim e Médio. Pela Figura \@ref(fig:fig5), 
+temos que as classificações Péssimo, Ruim e Médio estão com valores muito próximos.
 
 ```{r fig5, fig.cap="Comportamento da variável: PIB per capita."}
-boxplot(`Produto Interno Bruto per capita 2016`) +
-  density(`Produto Interno Bruto per capita 2016`)
+boxplot(`Produto Interno Bruto per capita 2016`, "PIB per capita") +
+  density(`Produto Interno Bruto per capita 2016`, "PIB per capita")
 ```
 
 ```{r fig8, fig.cap="Comportamento da variável: Porcentagem de pessoas em situação de pobreza."}
-boxplot(`% de pobres 2016`) +
-  density(`% de pobres 2016`)
+boxplot(`% de pobres 2016`, "% de pobres") +
+  density(`% de pobres 2016`, "% de pobres")
 ```
 
-Também identifica-se uma tendência de crescimento da participação da indústria conjuntamente com o crescimento da mediana da classificação do saneamento, de acordo com a Figura \@ref(fig:fig6). Entretanto na Figura \@ref(fig:fig7) temos o exato oposto em que podemos notar que conforme cresce a classificação diminui a participação da agropecuária.
+Também nota-se uma tendência de crescimento da participação da indústria 
+conjuntamente com o crescimento da mediana da classificação do saneamento, 
+de acordo com a Figura \@ref(fig:fig6). Entretanto na Figura \@ref(fig:fig7) 
+temos o exato oposto em que podemos notar que conforme cresce a classificação 
+diminui a participação da agropecuária.
 
 ```{r fig6, fig.cap="Comportamento da variável: Participação da agropecuária na economia."}
-boxplot(`Participação da Agropecuária no Valor Adicionado 2016`) +
-  density(`Participação da Agropecuária no Valor Adicionado 2016`)
+boxplot(`Participação da Agropecuária no Valor Adicionado 2016`, "Participação da Agropecuária") +
+  density(`Participação da Agropecuária no Valor Adicionado 2016`, "Participação da Agropecuária")
 ```
 
 ```{r fig7, fig.cap="Comportamento da variável: Participação da indústria na economia."}
-boxplot(`Participação da Indústria no Valor Adicionado 2016`) +
-  density(`Participação da Indústria no Valor Adicionado 2016`)
+boxplot(`Participação da Indústria no Valor Adicionado 2016`, "Participação da Indústria") +
+  density(`Participação da Indústria no Valor Adicionado 2016`, "Participação da Indústria")
 ```
 
 ## Variáveis da saúde
 
-O tipo de variável que mais se correlaciona com os níveis do saneamento são as variáveis da saúde
-
-Outro tipo de variável que deve impactar diretamente a classificação do saneamento básico são as variáveis econômicas, em que pela Tabela \@ref(tab:tab3), tem-se bons valores de nascidos com acompanhamento médico e com bons valores dos nascido com baixo peso. Para o desvio padrão a Mortalidade Infantil e os nascidos com baixo peso tem valores baixos. 
+Na Tabela \@ref(tab:tab3), tem-se bons valores de nascidos com acompanhamento 
+médico e com bons valores dos nascido com baixo peso. Para o desvio padrão a 
+Mortalidade Infantil e os nascidos com baixo peso tem valores baixos. 
 
 ```{r tab3}
 fastrep::describe(df %>% 
-                    select(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`, `% de nascidos vivos com baixo peso ao nascer 2016`,`Mortalidade infantil 2016`)) 
+                    select(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`, 
+                           `% de nascidos vivos com baixo peso ao nascer 2016`,
+                           `Mortalidade infantil 2016`)) %>%
+  fastrep::tbl("Medidas Resumo das Variáveis da Saúde") 
 ```
 
-Nas Figuras \@ref(fig:fig10) e \@ref(fig:fig11), é facilmente notado uma tendência crescente e uma tendência decrescente, respectivamente com os níveis do saneamento. No entanto, a Figura \@ref(fig:fig9) os níveis Ruim e Médio são muito próximos, com a maioria da porcentagem dos nascidos vivos ficando entre 55 e 80%.
+Nas Figuras \@ref(fig:fig10) e \@ref(fig:fig11), é facilmente notado uma 
+tendência crescente e uma tendência decrescente, respectivamente com os níveis 
+do saneamento. No entanto, a Figura \@ref(fig:fig9) os níveis Ruim e Médio são 
+muito próximos, com a maioria da porcentagem dos nascidos vivos ficando entre 55
+e 80%.
 
 ```{r fig9, fig.cap="Comportamento da variável: Porcentagem de nascidos vivos com cuidado na gravidez adequado."}
-boxplot(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`) +
-  density(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`)
+boxplot(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`, "% de nascidos vivos com cuidados adequados na gravidez") +
+  density(`% de nascidos vivos com pelo menos sete consultas de pré-natal 2016`, "% de nascidos vivos com cuidados adequados na gravidez")
 ```
 
 ```{r fig10, fig.cap="Comportamento da variável: Porcentagem de nascidos vivos com com baixo peso."}
-boxplot(`% de nascidos vivos com baixo peso ao nascer 2016`) +
-  density(`% de nascidos vivos com baixo peso ao nascer 2016`)
+boxplot(`% de nascidos vivos com baixo peso ao nascer 2016`, "% de nascidos vivos com baixo peso") +
+  density(`% de nascidos vivos com baixo peso ao nascer 2016`, "% de nascidos vivos com baixo peso")
 ```
 
 ```{r fig11, fig.cap="Comportamento da variável: Mortalidade infantil."}
-boxplot(`Mortalidade infantil 2016`) +
-  density(`Mortalidade infantil 2016`)
+boxplot(`Mortalidade infantil 2016`, "Mortalidade infantil") +
+  density(`Mortalidade infantil 2016`, "Mortalidade infantil")
 ```
 
 ## Variáveis sociais 
 
-As variáveis sociais são variáveis que medem a desigualdade social e o impacto do desmatamento de vegetação natural. Conforme demonstrado pela Tabela \@ref(tab:tab4) percebemos que as variáveis são completamente opostas quanto ao desvio padrão, com a cobertura vegetal brasileira ficando com valores intermediários de desmatamento, no entanto com alto desvio padrão, ao contrário do índice de gini, com desvio padrão baixo, mas também com média razoável.
+As variáveis sociais são variáveis que medem a desigualdade social e o impacto 
+do desmatamento de vegetação natural. Conforme demonstrado pela Tabela \@ref(tab:tab4) 
+percebemos que as variáveis são completamente opostas quanto ao desvio padrão, 
+com a cobertura vegetal brasileira ficando com valores intermediários de 
+desmatamento, no entanto com alto desvio padrão, ao contrário do índice de gini,
+com desvio padrão baixo, mas também com média razoável.
 
 ```{r tab4}
 fastrep::describe(df %>% 
                     select(`% de cobertura vegetal natural 2016`, 
-                           `Índice de Gini 2016`)) 
+                           `Índice de Gini 2016`)) %>%
+  fastrep::tbl("Medidas Resumo das Variáveis Sociais") 
 ```
 
 
-Nas Figuras \@ref(fig:fig10) e \@ref(fig:fig11), é facilmente notado uma tendência crescente e uma tendência decrescente, respectivamente com os níveis do saneamento. No entanto, a Figura \@ref(fig:fig9) os níveis Ruim e Médio são muito próximos, com a maioria da porcentagem dos nascidos vivos ficando entre 55 e 80%.
-
-Percebe-se uma característica peculiar na Figura \@ref(fig:fig12), em que conforme cresce o desmatamento cresce a classificação do saneamento básico, com o intervalo dos valores sendo amplo de 25% a 75%. No entanto, na Figura \@ref(fig:fig13) não é perceptível nenhuma tendência do Índice de Gini com a Avaliação do Saneamento. 
+Percebe-se uma característica peculiar na Figura \@ref(fig:fig12), em que 
+conforme cresce o desmatamento cresce a classificação do saneamento básico, 
+com o intervalo dos valores sendo amplo de 25% a 75%. No entanto, na Figura 
+\@ref(fig:fig13) não é perceptível nenhuma tendência do Índice de Gini com a 
+Avaliação do Saneamento. 
 
 ```{r fig12, fig.cap="Comportamento da variável: Porcentagem de cobertura vegetal natural."}
-boxplot(`% de cobertura vegetal natural 2016`) +
-  density(`% de cobertura vegetal natural 2016`)
+boxplot(`% de cobertura vegetal natural 2016`, "% de cobertura vegetal") +
+  density(`% de cobertura vegetal natural 2016`, "% de cobertura vegetal")
 ```
 
 ```{r fig13, fig.cap="Comportamento da variável: Índice de Gini."}
-boxplot(`Índice de Gini 2016`) +
-  density(`Índice de Gini 2016`)
+boxplot(`Índice de Gini 2016`, "Índice de Gini") +
+  density(`Índice de Gini 2016`, "Índice de Gini")
 ```
+
 
 # Análise Inferencial
 
-Nessa seção realizaremos e verificaremos o ajuste do modelo de regressão beta. Conjuntamente com a análise de diagnóstico, em que busca encontrar possíveis distorções das suposições do modelo, principalmente observações discrepantes e mal especificação do modelo.
-
-Outra etapa importante da análise inferencial é a análise de resíduos, onde verificamos a adequação da distribuição. Para finalizar a análise inferencial é realizado de testes de hipóteses, apresentação de coeficientes e seleção do modelo.
+Nessa seção realizaremos e verificaremos o ajuste do modelo de regressão beta. 
+Conjuntamente com a análise de diagnóstico, em que busca encontrar possíveis 
+distorções das suposições do modelo, principalmente observações discrepantes e 
+mal especificação do modelo. Para finalizar a análise inferencial é realizado de
+testes de hipóteses, apresentação de coeficientes e seleção do modelo.
 
 ## Análise de Diagnóstico
-```{r}
 
+Nessa subseção realizaremos a investigação de pontos influentes, pois avaliando a
+existência de observações aberrantes, isto é, pontos que exercem peso 
+desproporcional nas estimativas dos parâmetros do modelo de Regressão Beta, 
+conseguiremos avaliar a qualidade do modelo ajustado e a análise de resíduos, 
+para examinar a adequação da distribuição
+
+```{r}
 fit1 <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -253,82 +341,90 @@ fit1 <- betareg(Saneamento ~
                   `% de pobres 2016` +
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE)
-
-summary(fit1)
-
-
 residuot2<- residuals(fit1, type= "sweighted2")
 yajust<-fitted.values(fit1)
 yhat=hatvalues(fit1)
 dcook<- cooks.distance(fit1)
 residuot2_df<- data.frame(residuot2)
-
 deviance<- sum(residuals(fit1, tipe= "deviance")^2)
 ```
 
-## Distância de cook
-```{r}
+### Distância de cook e Alavancagem
+
+A Distância de Cook, mede essencialmente a influência das observações sobre os 
+parâmetros e o ajuste, avaliando a influência de o que pequenas pertubarções nas
+variâncias das observações causam nas estimativas dos parâmetros. Ou de forma 
+simplificada, temos a influência da observação $i$ sobre todos os $n$ valores ajustados.
+
+No entanto a medida alavancagem, que informam se uma observação é discrepante em
+termos de covariável, ou seja, utilizando os resíduos busca medir a discrepância
+entre o valor observado e o valor ajustado.
+
+Assim na Figura \ref{fig:cook}, é notável que não tem nenhuma observação 
+candidata a ponto influente, pois não tem influência desproporcional nas 
+covariáveis e não achata nenhum dos gráficos.
+
+```{r cook, fig.cap="Distância de Cook e Alavancagem para a Regressão Beta do Saneamento Brasileiro"}
 ggplot(df, aes(x=index(Saneamento), y= dcook))+
   geom_point(size=1.5)+
-  labs(x = "Índices", y = "Distância de Cook")
+  labs(x = "Índices", y = "Distância de Cook") + 
+  ggplot(df, aes(x=index(Saneamento), y=yhat))+
+  geom_point(size=1.5) + 
+  labs(x = "Índices", y = "Alavancagem")
 ```
 
-## Índices vs Resíduos
+### Índices vs Resíduos e valor ajustado vs Resíduos 
 
-```{r}
+Os gráficos de resíduos versus índices ou valor ajustado versus resíduos, devem
+possuem comportamento aleatório e poucos valores acima de -2 e 2 (ou -3 e 3),
+para que possamos garantir que não há nenhuma evidência de variância não
+constante.
+
+
+Portanto percebemos que na Figura \ref{fig:res}, não tem nenhum ponto fora de -3
+e 3, assim como não conseguimos notar nenhum comportamento de não aleatório.
+
+
+```{r res, fig.cap="Análise de Resíduo para a Regressão Beta do Saneamento Brasileiro"}
 ggplot(df, aes(x=index(Saneamento),y=residuot2))+
   geom_point(size=1.5) + 
   geom_hline(yintercept=3, colour="red2", 
+             linewidth=0.5,  linetype="dashed") +
+  geom_hline(yintercept=2, colour="orange", 
+             linewidth=0.5,  linetype="dashed") +
+  geom_hline(yintercept=-2, colour="orange", 
              linewidth=0.5,  linetype="dashed") +
   geom_hline(yintercept=0, colour="black", 
              linewidth=0.7, linetype="dashed") +  
   geom_hline(yintercept=-3, colour="red2", 
              linewidth=0.5,  linetype="dashed")+
-  labs(x = "Índices das observações", y = "Resíduos")
-
-```
-
-
-## Alavancagem
-
-```{r}
-ggplot(df, aes(x=index(Saneamento), y=yhat))+
-  geom_point(size=1.5) + 
-  labs(x = "Índice das observações", y = "htt")
-```
-
-## Y ajustado vs Resíduos 
-
-```{r}
+  labs(x = "Índices das observações", y = "Resíduos") +
 ggplot(df, aes(x=yajust, y=residuot2))+
   geom_point(size=1.5) + 
   geom_hline(yintercept=3, colour="red2", size=0.5, 
              linetype="dashed") +
+  geom_hline(yintercept=2, colour="orange", 
+             linewidth=0.5,  linetype="dashed") +
+  geom_hline(yintercept=-2, colour="orange", 
+             linewidth=0.5,  linetype="dashed") +
   geom_hline(yintercept=0, colour="black", size=0.7,
              linetype="dashed") +  
   geom_hline(yintercept=-3, colour="red2", size=0.5, 
              linetype="dashed")+
   labs(x = "y ajustado", y = "Resíduos")
-
 ```
 
-## Índices vs Resíduos
 
-```{r}
-ggplot(df, aes(x=Saneamento, y=residuot2))+
-  geom_point(size=1.5) + 
-  geom_hline(yintercept=3, colour="red2", 
-             linewidth=0.5,  linetype="dashed") +
-  geom_hline(yintercept=0, colour="black", 
-             linewidth=0.7, linetype="dashed") +  
-  geom_hline(yintercept=-3, colour="red2", 
-            linewidth=0.5,  linetype="dashed")+
-  labs(x = "y", y = "Resíduos")
-```
 
-## Envelope Simulado
+### Envelope Simulado
 
-```{r}
+O envolope simulado fornece a comparação entre os resíduos e os percentis da 
+distribuição, nos dando a ideia  se a distribuição é adequada para o ajuste, 
+como percebemos na Figura \@ref(fig:env), em que todas as observações estão 
+dentro das bandas de confiança.
+
+
+```{r env, fig.cap="Envelope Simulado da Regressão Beta do Saneamento Brasileiro"}
 ggplot(data = residuot2_df, 
        mapping = aes(sample = residuot2))+
   geom_qq_band( alpha = 0.5, fill="white", col="black") +
@@ -337,18 +433,18 @@ ggplot(data = residuot2_df,
   stat_qq_point(size=2) +
   scale_fill_discrete("Bandtype")  +
   labs(x = "Quantis teóricos", y = "Quantis amostrais")
-
 ```
 
 ## Critérios de Seleção de Modelos
+
+Na análise inferencial temos inúmeros procedimentos para a seleção de modelos. 
+Porém os os critérios que se destacam são AIC e BIC, no entanto nessa análise 
+também utilizaremos o BIC corrigido, Hannan-Quinnn e Hannan-Quinnn corrigido
+conforme podemos ver na Tabela \@ref(tab:aic).
+Em uma visão geral podemos dizer que esses são processos de minimização que não 
+envolvem testes, com a ideia de buscar um modelo que seja parcimonioso.
+
 ```{r}
-n=length(fit1$y)
-k=1+length(fit1$coefficients$mean)
-BICc=-2*fit1$loglik+(n*k*log(n)/(n-k-1))
-HQ=-2*fit1$loglik+(2*k*log(n))
-HQc=-2*fit1$loglik+(2*k*log(log(n))/(n-k-1))
-
-
 fit1 <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -356,7 +452,6 @@ fit1 <- betareg(Saneamento ~
                   `% de pobres 2016` +
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE)
-
 fit1a <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -365,7 +460,6 @@ fit1a <- betareg(Saneamento ~
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE,
                  link = "probit")
-
 fit1b <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -374,7 +468,6 @@ fit1b <- betareg(Saneamento ~
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE,
                  link = "cloglog")
-
 fit1c <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -383,7 +476,6 @@ fit1c <- betareg(Saneamento ~
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE,
                  link = "cauchit")
-
 fit1d <- betareg(Saneamento ~ 
                   `% de docentes na rede privada do fundamental com formação adequada 2016` +
                   `IDEB anos iniciais do ensino fundamental 2015`+
@@ -392,44 +484,102 @@ fit1d <- betareg(Saneamento ~
                   `Índice de Gini 2016`, 
                 data = df, x=TRUE,
                  link = "loglog")
+n=length(fit1$y)
+k=1+length(fit1$coefficients$mean)
+BICc=-2*fit1$loglik+(n*k*log(n)/(n-k-1))
+HQ=-2*fit1$loglik+(2*k*log(n))
+HQc=-2*fit1$loglik+(2*k*log(log(n))/(n-k-1))
 
-AIC(fit1, fit1a, fit1b, fit1c, fit1d)
-BIC(fit1, fit1a, fit1b, fit1c, fit1d)
+ka=1+length(fit1a$coefficients$mean)
+BICca=-2*fit1a$loglik+(n*ka*log(n)/(n-ka-1))
+HQa=-2*fit1a$loglik+(2*ka*log(n))
+HQca=-2*fit1a$loglik+(2*ka*log(log(n))/(n-ka-1))
+
+kb=1+length(fit1b$coefficients$mean)
+BICcb=-2*fit1b$loglik+(n*kb*log(n)/(n-kb-1))
+HQb=-2*fit1b$loglik+(2*kb*log(n))
+HQcb=-2*fit1b$loglik+(2*kb*log(log(n))/(n-kb-1))
+
+kc=1+length(fit1c$coefficients$mean)
+BICcc=-2*fit1c$loglik+(n*kc*log(n)/(n-kc-1))
+HQc=-2*fit1c$loglik+(2*kc*log(n))
+HQcc=-2*fit1c$loglik+(2*kc*log(log(n))/(n-kc-1))
+
+kd=1+length(fit1d$coefficients$mean)
+BICcd=-2*fit1d$loglik+(n*kd*log(n)/(n-kd-1))
+HQd=-2*fit1d$loglik+(2*kd*log(n))
+HQcd=-2*fit1d$loglik+(2*kd*log(log(n))/(n-kd-1))
+
+metrics = data.frame("Logit" = c(AIC(fit1), BIC(fit1), BICc, HQ, HQc),
+           "Probit" = c(AIC(fit1a), BIC(fit1a), BICca, HQa, HQca),
+           "Cloglog" = c(AIC(fit1b), BIC(fit1b), BICcb, HQb, HQcb),
+           "Cauchit" = c(AIC(fit1c), BIC(fit1c), BICcc, HQc, HQcc),
+           "Loglog" = c(AIC(fit1d), BIC(fit1d), BICcd, HQd, HQcd))
+rownames(metrics) = c('AIC', 'BIC', 'BICc', 'HQ', 'HQc')
+           
+```
+
+```{r aic}
+metrics %>% fastrep::tbl('Resumo dos critérios de seleção de molelos para função de ligação')
+```
+
+A função de ligação com melhor resultado em todos os critérios é a Cauchit. 
+Todavia, essa mesma função de ligação possui a menor explicação da variável
+resposta, de acordo com a Tabela \@ref(tab:r2). Assim, prosseguiremos a analise 
+com a função de ligação Logit, que possui valores maiores que a Cauchit nos critérios
+de seleção (quanto menor, melhor) e apenas fica atrás da Probit no pseudo $R^2$,
+sendo a função de ligação mais equilibrada. 
+
+```{r r2}
+
+r2 = data.frame("Pseudo R^2" = c(fit1$pseudo.r.squared, fit1a$pseudo.r.squared,
+                            fit1b$pseudo.r.squared, fit1c$pseudo.r.squared,
+                            fit1d$pseudo.r.squared)) 
+rownames(r2) = c('Logit', 'Probit', 'Cloglog', 'Cauchit', 'Loglog')
+r2 %>% 
+  fastrep::tbl('Pseudo r quadrado para cada função de ligação')
+
 ```
 
 ## Testes
 
-```{r}
-summary(fit1)
+Terminamos a análise inferencial com a avaliação do modelo de Regressão Beta 
+ajustado, a análise de significância das variáveis dadas pelo seguinte teste de hipótese:
+$$H_0:\beta_i = 0\text{ (Covariável não-significativa)}$$
+$$H_0:\beta_i \neq 0\text{ (Covariável significante)}$$
+
+O qual podemos analisar com a Tabela \@ref(tab:est).
+
+```{r est}
+fit2df(fit1) %>% 
+  fastrep::tbl('Estatísticas do Modelo Ajustado')
 ```
+
+A Tabela \@ref(tab:est) detalha, algumas estatísticas muito importantes sobre as
+covariáveis, mas principalmente informa que todas as variáveis preditivas são 
+significativas e que a melhor combinação para a estimação da Porcentagem da 
+população urbana residente em domicílios ligados à rede de esgotamento sanitário
+no ano de 2017 tem variáveis de praticamente todos os tipos: Sociais (Índice de 
+Gini e porcentagem de cobertura vegetal natural), Educacional (Porcentagem de 
+docentes na rede privada do fundamental com formação adequada e IDEB nos anos 
+iniciais do ensino fundamental) e Econômica (Porcentagem de pobres).
 
 # Conclusão
 
+Constatamos que as variáveis propostas para o modelo promovem conjuntamente uma
+boa explicação para o Saneamento brasileiro, quanto maior o investimento em 
+políticas públicas para educação e econômica, o estado tende a focar no 
+desenvolvimento de um sistema cloacal mais amplo, ou seja, basicamente o que 
+define a porcentagem de esgoto tratato é o desenvolvimento do estado.
+
 # Apêndice
 
-\section{Section name}
 
-```{r}
-summary(fit1)
-#para acessar o pseudo-R2
-fit1$pseudo.r.squared
-# para acessar o valor de AIC e BIC
-AIC(fit1)
-BIC(fit1)
-
-
-fit1=fit1d
-plot(fit1, which = 1:6)
-```
 
 ```{r get-labels, echo = FALSE}
 labs <- knitr::all_labels()
-labs <- setdiff(labs, c("setup", "get-labels"))
-
+labs <- setdiff(labs, c("get-labels"))
 ```
 
 ```{r ref.label=labs, echo=TRUE, eval=FALSE}
-
 ```
-
-
